--- a/1204_koiben/Base.lproj/Main.storyboard
+++ b/1204_koiben/Base.lproj/Main.storyboard
@@ -190,7 +190,6 @@
         <!--Main1-->
         <scene sceneID="NAC-xE-h6R">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dNc-Xb-96P" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Main1" id="DQG-NY-cvC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ojv-pu-W3l"/>
@@ -224,6 +223,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="w4l-N2-z0F"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dNc-Xb-96P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4764" y="-753.37331334332839"/>
         </scene>
@@ -244,7 +244,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vif-AA-0t5">
-                                <rect key="frame" x="149" y="396" width="77" height="30"/>
+                                <rect key="frame" x="149" y="432" width="77" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="会話をする"/>
                             </button>
@@ -256,7 +256,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="shO-8l-HfS">
-                                <rect key="frame" x="141" y="458" width="92" height="30"/>
+                                <rect key="frame" x="141" y="470" width="92" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="恋勉をやめる"/>
                                 <connections>
@@ -459,8 +459,8 @@
         <image name="img003.jpg" width="567" height="1005"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ZgI-Zk-lYf"/>
         <segue reference="2gU-4h-L2I"/>
-        <segue reference="tQ9-bd-Jca"/>
+        <segue reference="ggG-dg-g5w"/>
+        <segue reference="ZgI-Zk-lYf"/>
     </inferredMetricsTieBreakers>
 </document>
